--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
-* {
-    box-sizing: border-box;
-}
-
 .col {
+  box-sizing: border-box;
   width: 50%;
   float: left;
 }
 
 img {
-  max-width: 100vw;
+  width: 100vw;
   height: 100vh;
 }
