--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 * {
   margin: 0;
 }
+
 .col {
   box-sizing: border-box;
   width: 50%;
   float: left;
 }
 
-img {
+.pane {
   width: 100%;
   height: 100vh;
 }
