updating font url

--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url(https://fonts.google.com/specimen/Roboto);
+  src: url(https://fonts.googleapis.com/css?family=Roboto);
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url(https://fonts.google.com/specimen/Roboto);
+  src: url(https://fonts.googleapis.com/css?family=Roboto);
   font-weight: 600;
 }
 
