changing font definition syntax

--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src: url(https://fonts.googleapis.com/css?family=Roboto);
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src: url(https://fonts.googleapis.com/css?family=Roboto);
   font-weight: 600;
 }
 
 body {
-  font-family: "Roboto";
+  font-family: Roboto;
 }
 
 .smallText {
