--- a/style.css
+++ b/style.css
@@ -24,3 +24,22 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.hr_text {
+  max-width: 50%;
+  line-height: 1em;
+  text-align: center;
+  position: relative;
+  color: black;
+  opacity: 0.5;
+  ::before {
+    content: '';
+    position: absolute;
+  }
+  ::after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    
+  }
+}
